[gd_scene load_steps=9 format=3 uid="uid://df2h115cs0pg3"]

[ext_resource type="Script" path="res://lydspiller_panel.gd" id="1_g2h3u"]
[ext_resource type="Script" path="res://Server.gd" id="2_2knny"]
[ext_resource type="Theme" uid="uid://djqyb0vxc86uq" path="res://theme/playlistTheme.tres" id="2_4mumo"]
[ext_resource type="PackedScene" uid="uid://dn43ygbcsao74" path="res://AudioVisualizer.tscn" id="3_3oit0"]
[ext_resource type="Texture2D" uid="uid://b22l4od7200sk" path="res://lydknobb.png" id="4_cgpxc"]
[ext_resource type="PackedScene" uid="uid://djdhef7exlf5x" path="res://playlist_controller.tscn" id="4_uy2j8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eg6bf"]
bg_color = Color(0.278431, 0.72549, 0.905882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tqd3i"]
bg_color = Color(0.564706, 0.811765, 0.870588, 1)

[node name="LydspillerPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2h3u")

[node name="Server" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_2knny")

[node name="audio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"Analyser"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_4mumo")

[node name="btnStop" type="Button" parent="VBoxContainer/header"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme = ExtResource("2_4mumo")
text = "Stopp lyden"

[node name="btnSettings" type="Button" parent="VBoxContainer/header"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_4mumo")
text = "Rediger lister og knapper"

[node name="Label" type="Label" parent="VBoxContainer/header"]
layout_mode = 2
text = "Hovedvolum "

[node name="txtVol" type="Label" parent="VBoxContainer/header"]
unique_name_in_owner = true
layout_mode = 2
text = "100%"

[node name="slidVol" type="HSlider" parent="VBoxContainer/header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_icons/grabber = ExtResource("4_cgpxc")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_eg6bf")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_tqd3i")
value = 50.0

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/header"]
layout_mode = 2
theme = ExtResource("2_4mumo")

[node name="AudioInfoBox" type="Control" parent="VBoxContainer/header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Audioinfo" type="HBoxContainer" parent="VBoxContainer/header/AudioInfoBox"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_4mumo")
alignment = 2

[node name="audioname" type="Label" parent="VBoxContainer/header/AudioInfoBox/Audioinfo"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_4mumo")
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "INGEN LYD SPILLES"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/header/AudioInfoBox/Audioinfo"]
layout_mode = 2
theme = ExtResource("2_4mumo")

[node name="audiotime" type="Label" parent="VBoxContainer/header/AudioInfoBox/Audioinfo"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_4mumo")
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "00:00"

[node name="seperator" type="Label" parent="VBoxContainer/header/AudioInfoBox/Audioinfo"]
layout_mode = 2
theme = ExtResource("2_4mumo")
text = " / "

[node name="audiolength" type="Label" parent="VBoxContainer/header/AudioInfoBox/Audioinfo"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_4mumo")
theme_override_colors/font_color = Color(0.498039, 0.498039, 0.498039, 1)
text = "00.00"

[node name="Visualizer" parent="VBoxContainer/header/AudioInfoBox" instance=ExtResource("3_3oit0")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0.784314, 0, 1)

[node name="boxGroups" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tab_alignment = 1

[node name="gruppe 1" type="Control" parent="VBoxContainer/boxGroups"]
layout_mode = 2

[node name="gruppe 2" type="Control" parent="VBoxContainer/boxGroups"]
visible = false
layout_mode = 2

[node name="gruppe 3" type="Control" parent="VBoxContainer/boxGroups"]
visible = false
layout_mode = 2

[node name="content" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="gridPlayElements" type="GridContainer" parent="VBoxContainer/content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="example" parent="VBoxContainer/content/gridPlayElements" instance=ExtResource("4_uy2j8")]
layout_mode = 2

[node name="example2" parent="VBoxContainer/content/gridPlayElements" instance=ExtResource("4_uy2j8")]
layout_mode = 2

[node name="example3" parent="VBoxContainer/content/gridPlayElements" instance=ExtResource("4_uy2j8")]
layout_mode = 2

[node name="example4" parent="VBoxContainer/content/gridPlayElements" instance=ExtResource("4_uy2j8")]
layout_mode = 2

[node name="example5" parent="VBoxContainer/content/gridPlayElements" instance=ExtResource("4_uy2j8")]
layout_mode = 2

[node name="example6" parent="VBoxContainer/content/gridPlayElements" instance=ExtResource("4_uy2j8")]
layout_mode = 2

[connection signal="list_data_all_requested" from="Server" to="." method="_on_server_list_data_all_requested"]
[connection signal="list_data_requested" from="Server" to="." method="_on_server_list_data_requested"]
[connection signal="play_list_requested" from="Server" to="." method="_on_server_play_list_requested"]
[connection signal="stop_audio_requested" from="Server" to="." method="_on_server_stop_audio_requested"]
[connection signal="pressed" from="VBoxContainer/header/btnStop" to="." method="stop"]
[connection signal="pressed" from="VBoxContainer/header/btnSettings" to="." method="switchToSettingsScene"]
[connection signal="value_changed" from="VBoxContainer/header/slidVol" to="." method="_on_slid_vol_value_changed"]
[connection signal="tab_changed" from="VBoxContainer/boxGroups" to="." method="changeGroupByIndex"]
